Fixed 404 images - added path for devMode for webpack - added devMode condition in index.js to better help debugging - added condition to render invisible hexagon when no hero exists

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -15,6 +15,10 @@
         width : 100%;
         margin: 4px !important;
     };
+
+    &-hidden {
+        visibility: hidden;
+    };
 };
 
 .HTT__card,
